# teide-js

./: CLAUDE.md  CMakeLists.txt  package-lock.json  package.json  tsconfig.json
docs/plans/: 2026-02-22-teide-js-design.md  2026-02-22-teide-js-impl.md
lib/: context.ts  expr.ts  index.ts  query.ts  series.ts  table.ts
src/: addon.cpp  compat.h  context.cpp  context.h  query.cpp  query.h  series.cpp  series.h  table.cpp  table.h  teide_thread.cpp  teide_thread.h
test/: e2e.test.ts  expr.test.ts  smoke.test.ts  table.test.ts
test/fixtures/: sales.csv  small.csv
